alteração de projeto

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
             <section id="projetos" class="projetos">
                 <h3>Projetos</h3>
                 <div class="cardProjeto">
-                    <a href="https://elemento46.github.io/atividade-30-04/index.html" target="_blank"
-                        rel="noopener">Projeto Sobre Mim</a>
+                    <a href="https://elemento46.github.io/tcc-final target="_blank"
+                        rel="noopener">Site CarbonX</a>
                 </div>
                 <div class="cardProjeto">
                     <a href="https://github.com/Elemento46/graficos-python" target="_blank" rel="noopener">Gráficos em
