--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://unpkg.com/scrollreveal@4.0.9/dist/scrollreveal.min.js"></script>
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <script src="https://unpkg.com/stats.js/build/stats.min.js"></script>
 </head>
 
 <body>
@@ -16,7 +17,8 @@
     <div class="container">
         <header id="home" class="home">
             <a href="#home">
-                <img class="brand" src="assets/Imagem do WhatsApp de 2025-09-30 à(s) 15.39.39_5c2e9f06.jpg" alt="Foto do Alex">
+                <img class="brand" src="assets/Imagem do WhatsApp de 2025-09-30 à(s) 15.39.39_5c2e9f06.jpg"
+                    alt="Foto do Alex">
             </a>
             <h1>Olá! Sou o Alex</h1>
             <h4>24 Anos - Músico - Desenvolvedor Web</h4>
@@ -49,8 +51,8 @@
             <section id="projetos" class="projetos">
                 <h3>Projetos</h3>
                 <div class="cardProjeto">
-                    <a href="https://elemento46.github.io/tcc-final target="_blank"
-                        rel="noopener">Site CarbonX</a>
+                    <a href="https://elemento46.github.io/atividade-30-04/index.html" target="_blank"
+                        rel="noopener">Projeto Sobre Mim</a>
                 </div>
                 <div class="cardProjeto">
                     <a href="https://github.com/Elemento46/graficos-python" target="_blank" rel="noopener">Gráficos em
