att informações portfolio

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio Alexandre</title>
-    <link rel="shortcut icon" href="assets/figure-svgrepo-com.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/5215a-baggage-claim-svgrepo-com.svg" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <script src="https://unpkg.com/scrollreveal@4.0.9/dist/scrollreveal.min.js"></script>
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
@@ -41,9 +41,9 @@
         <main>
             <section id="sobre" class="sobre">
                 <h3>Quem sou eu?</h3>
-                <p>Me chamo Alexandre Euclides Rodrigues, sou músico e aluno de Desenvolvimento Web no Instituto da
-                    Oportunidade Social. Possuo alguns conhecimentos básicos sobre Desenvolvimento Web e estou
-                    aprimorando meu conhecimento na área, aprendendo mais a cada dia. Busco me aprofundar no campo da
+                <p>Me chamo Alexandre Euclides Rodrigues, sou músico e fui aluno de Desenvolvimento Web no Instituto da
+                    Oportunidade Social. Hoje sou Desenvolvedor Web e possuo alguns conhecimentos básicos sobre outras linguagens e estou
+                    aprimorando meu conhecimento na área da tecnologia, aprendendo mais a cada dia. Busco me aprofundar no campo da
                     tecnologia e conquistar oportunidades para atuar na área, visando meu crescimento como profissional.
                 </p>
             </section>
@@ -51,12 +51,15 @@
             <section id="projetos" class="projetos">
                 <h3>Projetos</h3>
                 <div class="cardProjeto">
-                    <a href="https://elemento46.github.io/atividade-30-04/index.html" target="_blank"
-                        rel="noopener">Projeto Sobre Mim</a>
+                    <a href="https://elemento46.github.io/tcc-final" target="_blank" rel="noopener">Site CarbonX</a>
                 </div>
                 <div class="cardProjeto">
                     <a href="https://github.com/Elemento46/graficos-python" target="_blank" rel="noopener">Gráficos em
                         Python</a>
+                </div>
+                <div class="cardProjeto">
+                    <a href="https://github.com/Elemento46/banco-de-estoque" target="_blank" rel="noopener">Banco de
+                        Estoque com Java</a>
                 </div>
             </section>
 
@@ -169,7 +172,15 @@
             </section>
         </main>
 
-        <footer>&copy; Alexandre Rodrigues - 2025®</footer>
+        <footer>
+            <section id="bibliotecas" class="bibliotecas">
+                <p>Portfólio possuí 3 Bibliotecas de JavaScript para estilização e modernidade, sendo elas:</p>
+                <p><a href="https://scrollrevealjs.org">ScrollReveal</a></p>
+                <p><a href="https://vincentgarreau.com/particles.js">Particles.JS</a></p>
+                <p><a href="https://github.com/mrdoob/stats.js">Stats.JS</a></p>
+            </section>
+            &copy; Alexandre Rodrigues - 2025®
+        </footer>
     </div>
 
     <script src="script.js"></script>
