--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     alt="Foto do Alex">
             </a>
             <h1>Olá! Sou o Alex</h1>
-            <h4>24 Anos - Músico - Desenvolvedor Web</h4>
+            <h4>24 Anos - Músico - Desenvolvedor Web/Front-End - São Paulo-SP</h4>
             <div class="social" aria-label="Perfis sociais">
                 <a href="https://github.com/Elemento46" target="_blank" rel="noopener" aria-label="GitHub">
                     <img src="assets/github-142-svgrepo-com.svg" alt="Ícone GitHub">
@@ -41,10 +41,10 @@
         <main>
             <section id="sobre" class="sobre">
                 <h3>Quem sou eu?</h3>
-                <p>Me chamo Alexandre Euclides Rodrigues, sou músico e fui aluno de Desenvolvimento Web no Instituto da
-                    Oportunidade Social. Hoje sou Desenvolvedor Web e possuo alguns conhecimentos básicos sobre outras linguagens e estou
-                    aprimorando meu conhecimento na área da tecnologia, aprendendo mais a cada dia. Busco me aprofundar no campo da
-                    tecnologia e conquistar oportunidades para atuar na área, visando meu crescimento como profissional.
+                <p>Sou Alexandre Euclides Rodrigues, 24 anos, músico e Desenvolvedor Web formado pelo Instituto da
+                    Oportunidade Social (IOS). Atuo no desenvolvimento de sites e aplicações, unindo boas práticas de
+                    código, performance e acessibilidade. Estou em constante evolução técnica, ampliando meu repertório
+                    em linguagens, frameworks e ferramentas para entregar soluções robustas e escaláveis.
                 </p>
             </section>
 
