--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
                     Oportunidade Social (IOS). Atuo no desenvolvimento de sites e aplicações, unindo boas práticas de
                     código, performance e acessibilidade. Estou em constante evolução técnica, ampliando meu repertório
                     em linguagens, frameworks e ferramentas para entregar soluções robustas e escaláveis. Apaixonado
-                    por tecnologia, busco sempre inovar e criar experiências digitais impactantes. Estudando sempre novas formas
+                    por tecnologia, busco sempre inovar e criar experiências digitais impactantes. Estudando sempre
+                    novas formas
                     e novas linguagens para aprimorar minhas habilidades como desenvolvedor.
                 </p>
             </section>
