--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <section id="projetos" class="projetos">
                 <h3>Projetos</h3>
                 <div class="cardProjeto">
-                    <a href="https://elemento46.github.io/tcc-final" target="_blank" rel="noopener">Site CarbonX</a>
+                    <a href="https://elemento46.github.io/tcc-final" target="_blank" rel="noopener">Site CarbonX</a> - <a href="https://github.com/Elemento46/tcc-final" target="_blank" rel="noopener">Repositório do Site</a>
                 </div>
                 <div class="cardProjeto">
                     <a href="https://github.com/Elemento46/graficos-python" target="_blank" rel="noopener">Gráficos em
