--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     alt="Foto do Alex">
             </a>
             <h1>Olá! Sou o Alex</h1>
-            <h4>24 Anos - Músico - Desenvolvedor Web/Front-End/FullStack - São Paulo-SP</h4>
+            <h4>24 Anos - Músico - Desenvolvedor Web/Front-End - São Paulo-SP</h4>
             <div class="social" aria-label="Perfis sociais">
                 <a href="https://github.com/Elemento46" target="_blank" rel="noopener" aria-label="GitHub">
                     <img src="assets/github-142-svgrepo-com.svg" alt="Ícone GitHub">
@@ -44,17 +44,13 @@
                 <p>Sou Alexandre Euclides Rodrigues, 24 anos, músico e Desenvolvedor Web formado pelo Instituto da
                     Oportunidade Social (IOS). Atuo no desenvolvimento de sites e aplicações, unindo boas práticas de
                     código, performance e acessibilidade. Estou em constante evolução técnica, ampliando meu repertório
-                    em linguagens, frameworks e ferramentas para entregar soluções robustas e escaláveis. Apaixonado
-                    por tecnologia, busco sempre inovar e criar experiências digitais impactantes. Estudando sempre
-                    novas formas
-                    e novas linguagens para aprimorar minhas habilidades como desenvolvedor.
-                </p>
+                    em linguagens, frameworks e ferramentas para entregar soluções robustas e escaláveis.</p>
             </section>
 
             <section id="projetos" class="projetos">
                 <h3>Projetos</h3>
                 <div class="cardProjeto">
-                    <a href="https://elemento46.github.io/tcc-final" target="_blank" rel="noopener">Site CarbonX</a> - <a href="https://github.com/Elemento46/tcc-final" target="_blank" rel="noopener">Repositório do Site</a>
+                    <a href="https://elemento46.github.io/tcc-final" target="_blank" rel="noopener">Site CarbonX</a>
                 </div>
                 <div class="cardProjeto">
                     <a href="https://github.com/Elemento46/graficos-python" target="_blank" rel="noopener">Gráficos em
