--- a/index.html
+++ b/index.html
@@ -20,17 +20,19 @@
                 <img class="brand" src="assets/Imagem do WhatsApp de 2025-09-30 à(s) 15.39.39_5c2e9f06.jpg"
                     alt="Foto do Alex">
             </a>
-            <h1>Olá! Sou o Alex</h1>
-            <h4>24 Anos - Músico - Desenvolvedor Web/Front-End - São Paulo-SP</h4>
-            <div class="social" aria-label="Perfis sociais">
-                <a href="https://github.com/Elemento46" target="_blank" rel="noopener" aria-label="GitHub">
-                    <img src="assets/github-142-svgrepo-com.svg" alt="Ícone GitHub">
-                </a>
-                <a href="https://www.linkedin.com/in/alexandre-euclides-b2162618a/" target="_blank" rel="noopener"
-                    aria-label="LinkedIn">
-                    <img src="assets/linkedin-svgrepo-com.svg" alt="Ícone LinkedIn">
-                </a>
-            </div>
+            <section id="bibliotecas" class="bibliotecas">
+                <h1>Olá! Sou o Alex</h1>
+                <h4>24 Anos - Músico - Desenvolvedor Web/Front-End - São Paulo-SP</h4>
+                <div class="social" aria-label="Perfis sociais">
+                    <a href="https://github.com/Elemento46" target="_blank" rel="noopener" aria-label="GitHub">
+                        <img src="assets/github-142-svgrepo-com.svg" alt="Ícone GitHub">
+                    </a>
+                    <a href="https://www.linkedin.com/in/alexandre-euclides-b2162618a/" target="_blank" rel="noopener"
+                        aria-label="LinkedIn">
+                        <img src="assets/linkedin-svgrepo-com.svg" alt="Ícone LinkedIn">
+                    </a>
+                </div>
+            </section>
         </header>
 
         <nav id="informações" class="informações" aria-label="Navegação principal">
